Made some changes to the padding and spacing for forms in lists and lists in general to make them fit into the general idea of fitting into multiples of 5 and fixed an error with a border.

--- a/src/AppBundle/Resources/assets/scss/components/_forms.scss
+++ b/src/AppBundle/Resources/assets/scss/components/_forms.scss
@@ -11,7 +11,7 @@ form {
 
   &.in-page-form {
     border-left: 3px solid $grey-2;
-    padding-left: 10px;
+    padding-left: 15px;
 
     .form-date {
       .form-group {
@@ -78,7 +78,8 @@ form {
     }
 
     .data-item & {
-      margin-bottom: 10px;
+      padding-top: 6px;
+      padding-bottom: 3px;
     }
 
   }
